# qkd-verifier

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tree.py
.github/workflows/: ci.yml
configs/instances/: B92_protocol.toml  test_protocol.yaml
coq/: _CoqProject
coq/Theories/Core/: .Dummy.aux  Dummy.glob  Dummy.v  Dummy.vo  Preludes.v
src/: __init__.py
src/certificate/: normalizer.py
src/generator/: coq_generator.py
src/generator/templates/: instance.v.j2
src/models/: protocol.py
src/parser/: toml_parser.py  yaml_parser.py
src/runner/: __init__.py  coq_runner.py  generate_instance.py
src/solver/: compute_delta_ph.py
tests/: test_cli_generate.py  test_generator.py
