[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qkd-verifier"
version = "0.1.0"
description = "Automatic verifier qkd protocols Koashi method"
authors = [{name = "MVetukh", email = "m.vetux@yandex.ru"}]
readme = "README.md"
license = "MIT"  # Исправлено: строка вместо таблицы
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.21.0",
    "jinja2>=3.0",  # Для шаблонов Coq-кода
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8", 
    "mypy",
    "pytest-cov",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.scripts]
qkd-verify = "src.runner.coq_runner:main"